ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  creationTimestamp: null
  name: neha-final-app
spec: {}
status: {}
