deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: neha-app
  name: neha-app
  namespace: neha-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: neha-appweb
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: ashu-appweb
    spec:
      containers:
      - image: dockerneha/nehaweb:sec-check16
        name: nehaweb
        ports:
        - containerPort: 80
        resources: {}
status: {}
