service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: nehalb
  name: nehalb
  namespace: neha-app
spec:
  ports:
  - name: 80-80
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: nehalb
  type: ClusterIP
status:
  loadBalancer: {}
