ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: neha-ingress
  namespace: neha-app
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: nehaashutoshh.in
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nehalb # name of service 
            port:
              number: 80 # port of service
